# claude-md-file-generator

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/commands/: compose-claude-md.md  fill-claude-md.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
modules/: api-config-template.md  api-interaction.md  architecture-template.md  changelog-config-template.md  changelog-conventions.md  code-quality.md  code-style.md  cross-platform.md  database-config-template.md  database-conventions.md  dependency-config-template.md  dependency-management.md  documentation.md  environment-setup.md  error-handling.md  forbidden-actions.md  forbidden-zones-template.md  git-config-template.md  git-rules.md  glossary-template.md  key-conventions-template.md  linter-config-template.md  multi-agent-workflow.md  output-formatting.md  performance.md  pii-protection.md  pr-workflow.md  project-context-template.md  project-summary-template.md  security.md  slash-commands.md  tdd-practices.md  testing-config-template.md  testing-patterns.md  todo-conventions.md  type-checker-config-template.md
skills/: fill-architecture.md  fill-glossary.md  fill-key-conventions.md  fill-project-context.md  fill-project-summary.md  fill.md
src/claude_mdfile_generator/: __init__.py  bundled.py  cli.py  generator.py  models.py  storage.py  tui.py
src/claude_mdfile_generator/bundled_modules/: architecture-template.md  ci-pipeline-template.md  code-quality.md  code-style-template.md  cross-platform.md  database-config-template.md  dependency-management.md  documentation-strategy-template.md  documentation.md  error-patterns-template.md  forbidden-zones-template.md  formatter-config-template.md  git-rules.md  investigation-first.md  multi-agent-workflow.md  output-formatting.md  performance.md  pr-config-template.md  pre-commit-hooks-template.md  project-context-template.md  testing-config-template.md  testing.md  todo-inventory-template.md
src/claude_mdfile_generator/bundled_skills/: compose-claude-md.md  fill.md
tests/: conftest.py  test_bundled.py  test_cli.py  test_generator.py  test_models.py  test_storage.py  test_tui.py
