[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-mdfile-generator"
version = "0.1.0"
description = "Lightweight TUI to generate claude.md files from reusable modules"
license = "MIT"
readme = "README.md"
authors = [{name = "claude-mdfile-generator contributors"}]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]
keywords = ["claude", "claude-code", "claude-md", "developer-tools", "tui", "code-generation"]
dependencies = [
    "pyyaml>=6.0",
    "questionary>=2.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/Inesteem/claude-mdfile-generator"
Repository = "https://github.com/Inesteem/claude-mdfile-generator"
Issues = "https://github.com/Inesteem/claude-mdfile-generator/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_mdfile_generator"]

[project.scripts]
claude-md = "claude_mdfile_generator.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "pyright>=1.1",
]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "Linux"
typeCheckingMode = "basic"
include = ["src"]
venvPath = "."
venv = ".venv"
